[gd_scene load_steps=8 format=4 uid="uid://chndrcxl56m26"]

[ext_resource type="Script" uid="uid://bdxjiuabgbca4" path="res://scripts/minigame1.gd" id="1_tbgi4"]
[ext_resource type="Texture2D" uid="uid://d072oou7v8m6r" path="res://assets/tilemap.png" id="3_o6xl0"]
[ext_resource type="PackedScene" uid="uid://vislyrog2ecb" path="res://scenes/MC.tscn" id="4_tipki"]
[ext_resource type="PackedScene" uid="uid://chpkb0v4ng5id" path="res://scenes/star.tscn" id="5_85g3d"]
[ext_resource type="Script" uid="uid://cpntc865eguwy" path="res://scripts/timer_label.gd" id="6_tefeu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7mycd"]
texture = ExtResource("3_o6xl0")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_272bh"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_7mycd")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_tbgi4")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAAcAAAABAAIAAAABAAcAAAABAAIAAAACAAcAAAABAAIAAAADAAcAAAABAAIAAAAEAAcAAAABAAIAAAAFAAcAAAABAAIAAAAGAAcAAAABAAIAAAAHAAcAAAABAAIAAAAIAAcAAAABAAIAAAAJAAcAAAABAAIAAAAKAAcAAAABAAIAAAALAAcAAAABAAIAAAAMAAcAAAABAAIAAAANAAcAAAABAAIAAAAOAAcAAAABAAIAAAAPAAcAAAABAAIAAAAQAAcAAAABAAIAAAARAAcAAAABAAIAAAD//wkAAAABAAUAAAD//wgAAAABAAUAAAD//wcAAAABAAUAAAD//wYAAAABAAUAAAD//wUAAAABAAUAAAD//wQAAAABAAUAAAD//wAAAAABAAUAAAD//wEAAAABAAUAAAD//wIAAAABAAUAAAD//wMAAAABAAUAAAASAAAAAAABAAUAAAASAAEAAAABAAUAAAASAAIAAAABAAUAAAASAAMAAAABAAUAAAASAAQAAAABAAUAAAASAAUAAAABAAUAAAASAAgAAAABAAUAAAASAAYAAAABAAUAAAASAAcAAAABAAUAAAASAAkAAAABAAUAAAD//woAAAABAAUAAAAAAAoAAAABAAUAAAABAAoAAAABAAUAAAACAAoAAAABAAUAAAADAAoAAAABAAUAAAAEAAoAAAABAAUAAAAFAAoAAAABAAUAAAAGAAoAAAABAAUAAAAHAAoAAAABAAUAAAAIAAoAAAABAAUAAAAJAAoAAAABAAUAAAAKAAoAAAABAAUAAAALAAoAAAABAAUAAAAMAAoAAAABAAUAAAANAAoAAAABAAUAAAAOAAoAAAABAAUAAAAPAAoAAAABAAUAAAAQAAoAAAABAAUAAAARAAoAAAABAAUAAAASAAoAAAABAAUAAAD/////AAABAAUAAAAAAP//AAABAAUAAAABAP//AAABAAUAAAACAP//AAABAAUAAAADAP//AAABAAUAAAAEAP//AAABAAUAAAAFAP//AAABAAUAAAAGAP//AAABAAUAAAAHAP//AAABAAUAAAAIAP//AAABAAUAAAAJAP//AAABAAUAAAAKAP//AAABAAUAAAALAP//AAABAAUAAAAMAP//AAABAAUAAAANAP//AAABAAUAAAAOAP//AAABAAUAAAAPAP//AAABAAUAAAAQAP//AAABAAUAAAARAP//AAABAAUAAAASAP//AAABAAUAAAA=")
tile_set = SubResource("TileSet_272bh")

[node name="CharacterBody2D" parent="." instance=ExtResource("4_tipki")]
position = Vector2(543, 378)

[node name="RigidBody2D" parent="." instance=ExtResource("5_85g3d")]
position = Vector2(151, 136)

[node name="SpawnTimer" type="Timer" parent="."]

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Marker2D6" type="Marker2D" parent="SpawnPoints"]
position = Vector2(20, 20)

[node name="Marker2D7" type="Marker2D" parent="SpawnPoints"]
position = Vector2(122, 20)

[node name="Marker2D8" type="Marker2D" parent="SpawnPoints"]
position = Vector2(255, 24)

[node name="Marker2D9" type="Marker2D" parent="SpawnPoints"]
position = Vector2(386, 26)

[node name="Marker2D10" type="Marker2D" parent="SpawnPoints"]
position = Vector2(482, 25)

[node name="Marker2D16" type="Marker2D" parent="SpawnPoints"]
position = Vector2(576, 23)

[node name="Marker2D11" type="Marker2D" parent="SpawnPoints"]
position = Vector2(668, 22)

[node name="Marker2D12" type="Marker2D" parent="SpawnPoints"]
position = Vector2(763, 22)

[node name="Marker2D13" type="Marker2D" parent="SpawnPoints"]
position = Vector2(905, 23)

[node name="Marker2D14" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1024, 23)

[node name="Marker2D15" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1130, 21)

[node name="Timer" type="Timer" parent="."]
wait_time = 21.0
one_shot = true
autostart = true

[node name="TimerLabel" type="Label" parent="."]
offset_left = 26.0
offset_top = 537.0
offset_right = 204.0
offset_bottom = 613.0
theme_override_font_sizes/font_size = 25
script = ExtResource("6_tefeu")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
